--- a/Frontend/flight-search-app/src/components/FlightSearch/TravelerSelector.css
+++ b/Frontend/flight-search-app/src/components/FlightSearch/TravelerSelector.css
@@ -5,13 +5,16 @@
   
   .clickable-field {
     padding: 10px 12px;
-    cursor: pointer;
     border: 1px solid #ccc;
     border-radius: 6px;
     font-size: 15px;
+    width: 100%;
+    height:44px;
+    box-sizing: border-box;
+    line-height: normal; 
     background-color: white;
-  }
-  
+    cursor: pointer;
+}
   .traveler-box {
     position: absolute;
     top: 100%;
@@ -37,10 +40,4 @@
     margin-top: 10px;
   }
   
-  .traveler-group button {
-    width: 28px;
-    height: 28px;
-    font-size: 16px;
-    font-weight: bold;
-  }
-  
+ 
